--- a/App/XF.JiGuangPush.Sample.Android/Properties/AndroidManifest.xml
+++ b/App/XF.JiGuangPush.Sample.Android/Properties/AndroidManifest.xml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="nwcon.authentication.dev" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="xf.jiguangpush.sample" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<!-- Required -->
-	<permission android:name="nwcon.authentication.dev.permission.JPUSH_MESSAGE" android:protectionLevel="signature" />
+	<permission android:name="xf.jiguangpush.sample.permission.JPUSH_MESSAGE" android:protectionLevel="signature" />
 	<!-- Required  一些系统要求的权限，如访问网络等-->
-	<uses-permission android:name="nwcon.authentication.dev.permission.JPUSH_MESSAGE" />
+	<uses-permission android:name="xf.jiguangpush.sample.permission.JPUSH_MESSAGE" />
 	<uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -25,7 +25,7 @@
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.GET_TASKS" />
 	<uses-permission android:name="android.permission.VIBRATE" />
-	<application android:label="nwcon.authentication.dev.Android" android:icon="@mipmap/icon">
+	<application android:label="xf.jiguangpush.sample.Android" android:icon="@mipmap/icon">
 		<!-- Required SDK 核心功能-->
 		<!-- 可配置android:process参数将PushService放在其他进程中 -->
 		<service android:name="cn.jpush.android.service.PushService" android:enabled="true" android:exported="false">
@@ -37,23 +37,23 @@
 			</intent-filter>
 		</service>
 		<!-- since 3.0.9 Required SDK 核心功能-->
-		<provider android:authorities="nwcon.authentication.dev.DataProvider" android:name="cn.jpush.android.service.DataProvider" android:exported="true" />
+		<provider android:authorities="xf.jiguangpush.sample.DataProvider" android:name="cn.jpush.android.service.DataProvider" android:exported="true" />
 		<!-- since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。 -->
 		<!-- 若不启用该功能可删除该组件，将不拉起其他应用也不能被其他应用拉起 -->
 		<service android:name="cn.jpush.android.service.DaemonService" android:enabled="true" android:exported="true">
 			<intent-filter>
 				<action android:name="cn.jpush.android.intent.DaemonService" />
-				<category android:name="nwcon.authentication.dev" />
+				<category android:name="xf.jiguangpush.sample" />
 			</intent-filter>
 		</service>
 		<!-- since 3.1.0 Required SDK 核心功能-->
-		<provider android:authorities="nwcon.authentication.dev.DownloadProvider" android:name="cn.jpush.android.service.DownloadProvider" android:exported="true" />
+		<provider android:authorities="xf.jiguangpush.sample.DownloadProvider" android:name="cn.jpush.android.service.DownloadProvider" android:exported="true" />
 		<!-- Required SDK核心功能-->
 		<receiver android:name="cn.jpush.android.service.PushReceiver" android:enabled="true">
 			<intent-filter android:priority="1000">
 				<action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
 				<!--Required  显示通知栏 -->
-				<category android:name="nwcon.authentication.dev" />
+				<category android:name="xf.jiguangpush.sample" />
 			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.USER_PRESENT" />
@@ -71,14 +71,14 @@
 			<intent-filter>
 				<action android:name="cn.jpush.android.ui.PushActivity" />
 				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="nwcon.authentication.dev" />
+				<category android:name="xf.jiguangpush.sample" />
 			</intent-filter>
 		</activity>
 		<!-- SDK 核心功能-->
 		<activity android:name="cn.jpush.android.ui.PopWinActivity" android:configChanges="orientation|keyboardHidden" android:exported="false" android:theme="@style/MyDialogStyle">
 			<intent-filter>
 				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="nwcon.authentication.dev" />
+				<category android:name="xf.jiguangpush.sample" />
 			</intent-filter>
 		</activity>
 		<!-- 注意此配置在 JPush 3.2.0 及以前版本是必须配置，3.2.0 以后版本已废弃此配置-->
@@ -86,7 +86,7 @@
 		<!-- Since JCore2.0.0 Required SDK核心功能-->
 		<!-- 可配置android:process参数将Service放在其他进程中；android:enabled属性不能是false -->
 		<!-- 这个是自定义Service，要继承极光JCommonService，可以在更多手机平台上使得推送通道保持的更稳定 -->
-		<service android:name="nwcon.authentication.dev.Droid.Notificaiton.MyJCommonService" android:enabled="true" android:exported="false" android:process=":pushcore">
+		<service android:name="xf.jiguangpush.sample.Droid.Notificaiton.MyJCommonService" android:enabled="true" android:exported="false" android:process=":pushcore">
 			<intent-filter>
 				<action android:name="cn.jiguang.user.service.action" />
 			</intent-filter>
@@ -95,7 +95,7 @@
 		<receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 		<!-- User defined.  For test only  用户自定义的广播接收器-->
 		<!--<receiver
-        android:name="nwcon.authentication.dev.Droid.Notificaiton.MyXFJiGuangPushReceiver"
+        android:name="xf.jiguangpush.sample.Droid.Notificaiton.MyXFJiGuangPushReceiver"
         android:exported="false"
         android:enabled="true">
       <intent-filter>
@@ -119,25 +119,25 @@
         -->
 		<!--接收网络变化 连接/断开 since 1.6.3-->
 		<!--
-        <category android:name="nwcon.authentication.dev" />
+        <category android:name="xf.jiguangpush.sample" />
       </intent-filter>
     </receiver>-->
 		<!-- User defined.  For test only  用户自定义接收消息器,3.0.7开始支持,目前新tag/alias接口设置结果会在该广播接收器对应的方法中回调-->
-		<receiver android:name="nwcon.authentication.dev.Droid.Notificaiton.MyJPushMessageReceiver" android:enabled="true" android:exported="false">
+		<receiver android:name="xf.jiguangpush.sample.Droid.Notificaiton.MyJPushMessageReceiver" android:enabled="true" android:exported="false">
 			<intent-filter>
 				<action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
-				<category android:name="nwcon.authentication.dev"></category>
+				<category android:name="xf.jiguangpush.sample"></category>
 			</intent-filter>
 		</receiver>
 		<!--since 3.3.0 Required SDK核心功能-->
 		<activity android:name="cn.jpush.android.service.JNotifyActivity" android:exported="true" android:taskAffinity="jpush.custom" android:theme="@android:style/Theme.Translucent.NoTitleBar">
 			<intent-filter>
 				<action android:name="cn.jpush.android.intent.JNotifyActivity" />
-				<category android:name="nwcon.authentication.dev" />
+				<category android:name="xf.jiguangpush.sample" />
 			</intent-filter>
 		</activity>
 		<!-- Required  . Enable it you can get statistics data with channel -->
 		<meta-data android:name="JPUSH_CHANNEL" android:value="developer-default" />
-		<meta-data android:name="JPUSH_APPKEY" android:value="372f99c01b6d4c0df1f26d98" />
+		<meta-data android:name="JPUSH_APPKEY" android:value="4def22c34f1b63c5da128d62" />
 	</application>
 </manifest>
