Add ClearNotifcation function Add Open Application Sample code

--- a/App/XF.JiGuangPush.Sample.Android/Properties/AndroidManifest.xml
+++ b/App/XF.JiGuangPush.Sample.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="xf.jiguangpush.sample" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28"/>
 	<!-- Required -->
 	<permission android:name="xf.jiguangpush.sample.permission.JPUSH_MESSAGE" android:protectionLevel="signature" />
 	<!-- Required  一些系统要求的权限，如访问网络等-->
@@ -95,30 +95,20 @@
 		<receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 		<!-- User defined.  For test only  用户自定义的广播接收器-->
 		<!--<receiver
-        android:name="xf.jiguangpush.sample.Droid.Notificaiton.MyXFJiGuangPushReceiver"
+        android:name="XF.JiGuangPush.Sample.Droid.Notificaiton.MyXFJiGuangPushReceiver"
         android:exported="false"
         android:enabled="true">
       <intent-filter>
         <action android:name="cn.jpush.android.intent.REGISTRATION" />
-        -->
-		<!--Required  用户注册SDK的intent-->
-		<!--
+	    	--><!--Required  用户注册SDK的intent--><!--
         <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
-        -->
-		<!--Required  用户接收SDK消息的intent-->
-		<!--
+		    --><!--Required  用户接收SDK消息的intent--><!--
         <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" />
-        -->
-		<!--Required  用户接收SDK通知栏信息的intent-->
-		<!--
+		    --><!--Required  用户接收SDK通知栏信息的intent--><!--
         <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
-        -->
-		<!--Required  用户打开自定义通知栏的intent-->
-		<!--
+		    --><!--Required  用户打开自定义通知栏的intent--><!--
         <action android:name="cn.jpush.android.intent.CONNECTION" />
-        -->
-		<!--接收网络变化 连接/断开 since 1.6.3-->
-		<!--
+		    --><!--接收网络变化 连接/断开 since 1.6.3--><!--
         <category android:name="xf.jiguangpush.sample" />
       </intent-filter>
     </receiver>-->
