--- a/App/XF.JiGuangPush.Sample.Android/XF.JiGuangPush.Sample.Android.csproj
+++ b/App/XF.JiGuangPush.Sample.Android/XF.JiGuangPush.Sample.Android.csproj
@@ -53,6 +53,9 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Xamarin.Android.JiGuang">
+      <Version>3.3.6</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.709228" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="28.0.0.1" />
@@ -63,7 +66,7 @@
     <PackageReference Include="Xamarin.Android.Support.CustomTabs" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="XF.JiGuang">
-      <Version>1.0.0</Version>
+      <Version>1.0.5</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
